--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/favs" routerLinkActive="active">FAVS</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">ABOUT US</a>
+        </li>
       </ul>
     </div>
 
