borrar busqueda y video about us

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -36,7 +36,8 @@
       <div class="col-12 text-center">
         <h3 class="mb-3 text-lime pop-in">Un video que nos inspiró</h3>
         <div class="ratio ratio-16x9 rounded-4 overflow-hidden shadow-lg border border-lime">
-          <iframe src="https://www.youtube.com/embed/KeqMbzCGQzA" title="Inspiración eSports" allowfullscreen></iframe>
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/xBCBOoHyeSU?si=BckrwZWOak3mwvfj" title="Inspiración eSports" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <small class="text-muted d-block mt-2">Este video refleja el impacto global de los eSports y nos motivó a crear este sitio.</small>
       </div>
