--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 <!-- ABOUT US -->
-<section class="section-about-us py-5 bg-black text-white border-top border-secondary fade-up">
+<section class="section-about-us py-5 bg-black text-white  border-secondary fade-up">
   <div class="container">
 
     <!-- Título principal -->
