--- a/src/app/sections/categories/categories.component.html
+++ b/src/app/sections/categories/categories.component.html
@@ -1,4 +1,4 @@
-<main class="esports-home bg-dark text-white">
+<main class="main-content">
   <section class="section-categories py-5 bg-black">
     <div class="container">
       <h2 class="section-title mb-5">CATEGORÍAS</h2>
