--- a/src/app/sections/home/home.component.html
+++ b/src/app/sections/home/home.component.html
@@ -6,7 +6,7 @@
 
   <!-- Contenido encima de la imagen -->
   <div class="container position-relative z-2 text-center py-5">
-    <h1 class="display-4 fw-bold text-white text-shadow">eSports Central</h1>
+    <h1 class="display-4 fw-bold text-white text-shadow">RJK SCORE</h1>
     <p class="lead text-light">Tu plataforma de eSports en vivo, resultados y recompensas</p>
   </div>
 </section>
