--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,9 +37,10 @@
       </div>
 
       <!-- Botones -->
-<a class="btn btn-register nav-link" routerLink="register" routerLinkActive="active">REGISTER</a>
+<a class="btn btn-register nav-link" routerLink="/register" routerLinkActive="active">REGISTER</a>
 
 <a class="btn btn-login nav-link" routerLink="/login" routerLinkActive="active">LOG IN</a>
+
 
     </div>
   </div>
