--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -58,3 +58,33 @@
 .coin-amount {
   font-size: 0.95rem;
 }
+.btn-register {
+  background-color: transparent;
+  border: 2px solid #cddc39;
+  color: #cddc39;
+  border-radius: 50px;
+  padding: 6px 16px;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+.btn-register:hover {
+  background-color: #cddc39;
+  color: #000;
+  box-shadow: 0 0 10px #cddc39;
+}
+
+.btn-login {
+  background-color: #cddc39;
+  color: #000;
+  border: none;
+  border-radius: 50px;
+  padding: 6px 16px;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+.btn-login:hover {
+  background-color: #d4e157;
+  box-shadow: 0 0 10px #cddc39;
+}
